[package]
name = "percolator-keeper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Permissionless keeper for Percolator slabs"

[[bin]]
name = "keeper"
path = "src/main.rs"

[lib]
name = "percolator_keeper"
path = "src/lib.rs"

[dependencies]
percolator = { path = "..", features = ["compact"] }
percolator-program = { path = "../program", features = ["no-entrypoint"] }
percolator-oracle = { path = "../oracle", features = ["no-entrypoint"] }
solana-program = "1.18"
solana-sdk = "1.18"
borsh = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
log = "0.4"

[dev-dependencies]
solana-program-test = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
