[package]
name = "percolator-oracle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Solana oracle adapter for Percolator — 4 DEX sources, graduation-aware"

[lib]
name = "percolator_oracle"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.18"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
